fix: align benefits text

--- a/styles/pages.css
+++ b/styles/pages.css
@@ -166,6 +166,7 @@ span {
 .benefit {
   margin-bottom: 15px;
   margin-left: 20px;
+  text-align: center;
 }
 
 .objectives {
